--- a/frontend/src/components/SessionForms/LoginForm.css
+++ b/frontend/src/components/SessionForms/LoginForm.css
@@ -57,6 +57,8 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
   
   input[type="submit"]:hover {
