--- a/frontend/src/components/NavBar/SidebarLinks.css
+++ b/frontend/src/components/NavBar/SidebarLinks.css
@@ -1,13 +1,25 @@
 .sidebarLinks {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    align-items: left;
+    justify-content: left;
     list-style: none;
     padding-top: 50px;
-    margin: 0;
+    padding-left: 50px;
     height: 100%;
   }
+
+  #links-container {
+    background-color: rgb(232, 242, 168);
+    width: 15%;
+    height: 70vh;
+    position: fixed;
+    overflow: auto;
+    display: flex;
+    flex-direction: column;
+    padding: 10px; 
+  }
+
   
   .sidebarLinks li {
     margin-bottom: 10px;
@@ -39,4 +51,46 @@
   .sidebarLinks li button:hover {
     color: #d503ff;
   }
+
+  h2 {
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    height: 100%;
+
+  }
+
+  #splash-image {
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+    padding-top: 50px;
+    height: 80%;
+  }
+
+ 
+  
+  .header {
+    margin-top: 50px;
+  }
+  
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  button {
+    position: relative;
+    z-index: 1;
+  }
+  
   
