--- a/frontend/src/components/Tracks/TrackItem.css
+++ b/frontend/src/components/Tracks/TrackItem.css
@@ -36,4 +36,11 @@
   .play-button:hover {
     background-color: #1ED760;
   }
+
+  .parent-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
   
