--- a/frontend/src/components/Profile/Profile.css
+++ b/frontend/src/components/Profile/Profile.css
@@ -10,18 +10,13 @@
 
 /* why is this affecting the userInfo profile-image?? but when i do css there, it doesn't work.. :( */
 
-.profile-container {
-margin: 20px auto;
-padding: 20px;
-border-radius: 5px;
-text-align: center;
-}
+
 
 .profile-header {
 font-size: 24px;
 font-weight: bold;
 margin-bottom: 10px;
-color: red;
+color: rgb(0, 42, 255);
 } 
 
 .profile-track-list {
@@ -53,4 +48,39 @@ border-radius: 5px;
 text-align: center;
 font-size: 30px;
 }
+
+.profile-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  width: 50%;
+  font-family: Arial, sans-serif;
+  color: #333;
+}
+
+h2 {
+  color: #1da1f2;
+  margin-bottom: 20px;
+}
+
+.track-item {
+  border: 1px solid #1da1f2;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 10px; 
+  margin-right: 100px;
+  width: 70%;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  justify-content: center;
+}
+
+.profile-grid {
+  display: grid;
+  grid-template-rows: auto 1fr;
+  height: 100vh; 
+  gap: 20px;
+}
+
 
