--- a/frontend/src/components/Tracks/TrackItem.css
+++ b/frontend/src/components/Tracks/TrackItem.css
@@ -1,14 +1,14 @@
 .track-item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 200px;
-    border: 1px solid #ddd;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    margin: 20px;
+    border: 1px solid #1da1f2;
+    border-radius: 10px;
+    background-color: white;
+    padding: 10px;
+    margin: 10px; 
+    margin-right: 100px;
+    width: 100%;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    justify-content: center;
+    z-index: 1
   }
   
   .track-item h2 {
@@ -37,10 +37,6 @@
     background-color: #1ED760;
   }
 
-  .parent-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+  
   
   
