--- a/frontend/src/components/Profile/Profile.css
+++ b/frontend/src/components/Profile/Profile.css
@@ -10,8 +10,6 @@
 
 /* why is this affecting the userInfo profile-image?? but when i do css there, it doesn't work.. :( */
 
-
-
 .profile-header {
 font-size: 24px;
 font-weight: bold;
@@ -54,7 +52,8 @@ font-size: 30px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 0 auto;
+  margin-left: 10%;
+  /* margin: 0 auto; */
   width: 50%;
   font-family: Arial, sans-serif;
   color: #333;
@@ -78,7 +77,11 @@ h2 {
 
 .profile-grid {
   display: grid;
-  grid-template-rows: auto 1fr;
+  /* display: flex; */
+  /* grid-template-rows: auto 1fr; */
+  margin-left: 10%;
+  justify-content: center;
+  /* width: 50%; */
   height: 100vh; 
   gap: 20px;
 }
