--- a/frontend/src/components/Tracks/Tracks.css
+++ b/frontend/src/components/Tracks/Tracks.css
@@ -2,6 +2,7 @@
   display: flex;
   height: 100vh;
   font-size: 1.5em; 
+  /* margin-left: 10%; */
 }
 
 
@@ -15,8 +16,12 @@
 
 .main-content-tracks {
   background-color: #eed9ee; 
-  width: 80%;
-  padding-left: 250px;
+  display: flex;
+  overflow-x: auto;
+  /* width: 80%; */
+  /* padding-left: 250px; */
+  margin-left: 10%;
+  justify-content: center;
 }
 
 .main-content-tracks-container {
