--- a/frontend/src/components/Profile/Profile.css
+++ b/frontend/src/components/Profile/Profile.css
@@ -65,22 +65,31 @@ h2 {
   margin-bottom: 20px;
 }
 
-.track-item {
-  border: 1px solid #1da1f2;
-  border-radius: 10px;
-  padding: 10px;
-  margin: 10px; 
-  margin-right: 100px;
-  width: 70%;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  justify-content: center;
-}
+
 
 .profile-grid {
-  display: grid;
-  grid-template-rows: auto 1fr;
-  height: 100vh; 
-  gap: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh; /* Adjust the height as needed */
+  margin-left: 200px; /* Add the desired margin on the left side */
 }
+
+
+.profile-track-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 20%; /* Adjust the width as needed */
+  margin: 20px auto; /* Centers the item horizontally */
+}
+
+.profile-container {
+  margin-left: 200px;
+}
+
+
 
 
