--- a/frontend/src/components/Tracks/TrackItem.css
+++ b/frontend/src/components/Tracks/TrackItem.css
@@ -1,16 +1,14 @@
 .track-item {
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  /* justify-content: center; */
   border: 1px solid #1da1f2;
   border-radius: 10px;
-  background-color: white;
-  padding: 10px;
-  margin: 10px;
-  margin-right: 100px;
-  width: 100%;
+  padding: 20px;
+  margin-bottom: 20px;
+  background-color: #ffffff;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  justify-content: center;
-  z-index: 1;
-  display: inline-block;
-  max-width: 300px;
 }
 
 .track-item h2 {
@@ -24,7 +22,38 @@
   color: #444;
 }
 
-.play-button {
+/* .track-item .song-image {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  object-fit: cover;
+} */
+
+/* .track-item .music-bar {
+  width: 100%;
+  height: 10px;
+  background-color: #1DA1F2;
+  margin: 10px 0;
+}
+
+.track-item .stats {
+  display: flex;
+  align-items: center;
+}
+
+.track-item .stats span {
+  margin-right: 10px;
+}
+
+.track-item .artist-name {
+  font-weight: bold;
+}
+
+.track-item .song-name {
+  color: #888;
+} */
+
+.track-item button {
   margin-top: 20px;
   color: #fff;
   background-color: #1DB954;
@@ -35,11 +64,6 @@
   transition: background-color 0.3s ease;
 }
 
-.play-button:hover {
+.track-item button:hover {
   background-color: #1ED760;
 }
-
-
-  
-  
-  
