--- a/frontend/src/components/Profile/Profile.css
+++ b/frontend/src/components/Profile/Profile.css
@@ -64,7 +64,7 @@ h2 {
   margin-bottom: 20px;
 }
 
-.track-item {
+/* .track-item {
   border: 1px solid #1da1f2;
   border-radius: 10px;
   padding: 10px;
@@ -73,7 +73,7 @@ h2 {
   width: 70%;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   justify-content: center;
-}
+} */
 
 .profile-grid {
   display: grid;
