--- a/frontend/src/components/Tracks/TrackItem.css
+++ b/frontend/src/components/Tracks/TrackItem.css
@@ -1,69 +1,89 @@
 .track-item {
   display: flex;
-  flex-direction: column;
-  /* align-items: center; */
-  /* justify-content: center; */
   border: 1px solid #1da1f2;
-  border-radius: 10px;
-  padding: 20px;
-  margin-bottom: 20px;
-  background-color: #ffffff;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-}
-
-.track-item h2 {
-  margin: 0;
-  font-size: 18px;
-  color: #1DB954;
-}
-
-.track-item p {
-  margin: 5px 0;
-  color: #444;
-}
-
-/* .track-item .song-image {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  object-fit: cover;
-} */
-
-/* .track-item .music-bar {
+  border-radius: 30px;
+  padding: 15px;
+  margin: 10px; 
+  /* margin-right: 100px; */
   width: 100%;
-  height: 10px;
-  background-color: #1DA1F2;
-  margin: 10px 0;
+  height: 110%;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  /* justify-content: center; */
 }
 
-.track-item .stats {
+.track-image {
+  /* width: 100%; */
+  position: absolute;
+  max-width: 100%;
+  max-height: 100%;
+  width: 150px;
+  height: 150px;
+  margin-left: 5px;
+  /* margin-top: 1px; */
+  margin-bottom: 20px;
+  padding-bottom: 10px;
+  border-radius: 30px;
+  /* height: 80%; */
+  /* object-fit: fill; */
+  /* max-width: 50%; */
+  /* top: 0; */
+  /* right: 0%;  */
+  /* max-width: 100px; 
+  max-height: 100px;  */
+  object-fit: cover;
+}
+
+
+.track-item .track-details .title, .artist, .genre {
+  flex: 1;
+  margin-left: 170px;
+  position: relative;
+  color: black;
+}
+
+.track-item .track-details .plays, .likes, .reshares {
+  /* flex: 1; */
+  color: black;
+  flex-direction: row;
   display: flex;
-  align-items: center;
+  position: relative;
+  margin-left: 100px;
 }
 
-.track-item .stats span {
-  margin-right: 10px;
-}
-
-.track-item .artist-name {
-  font-weight: bold;
-}
-
-.track-item .song-name {
-  color: #888;
-} */
-
-.track-item button {
+.track-stats {
+  display: flex;
+  flex-direction: row;
+  margin-left: 100px;
   margin-top: 20px;
-  color: #fff;
-  background-color: #1DB954;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 20px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
+  margin-bottom: 20px;
 }
 
-.track-item button:hover {
-  background-color: #1ED760;
+.track-item .track-buttons {
+  display: flex;
+  gap: 75px;
+}
+
+.track-buttons-container {
+  margin-left: 250px;
+}
+
+.track-item .track-buttons button {
+  padding: 5px 10px;
+  font-size: 14px;
+  background-color: #ccc;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  /* justify-content: center; */
+  /* margin-left: 50px; */
+}
+
+.track-item .waveform {
+  width: 20%;
+  height: 25px; /* Adjust the height as needed */
+  right: 40%;
+  /* top: 0%; */
+  background-color: #ccc;
+  position: absolute;
+  /* Add additional styling for the waveform visualization */
 }
