--- a/frontend/src/components/Profile/Profile.css
+++ b/frontend/src/components/Profile/Profile.css
@@ -1,50 +1,48 @@
 .profile-image-userInfo {
   height: 100px;
-  width: 100px; 
+  width: 100px;
   margin-right: 5px;
-  margin-left: 2px; 
+  margin-left: 2px;
   border-radius: 30px;
   margin-bottom: 100px;
   margin-left: 5px;
 }
 
-/* why is this affecting the userInfo profile-image?? but when i do css there, it doesn't work.. :( */
-
 .profile-header {
-font-size: 24px;
-font-weight: bold;
-margin-bottom: 10px;
-color: rgb(0, 42, 255);
-} 
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: rgb(0, 42, 255);
+}
 
 .profile-track-list {
-margin-top: 20px;
+  margin-top: 20px;
 }
 
 .profile-track-list-item {
-margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .profile-track-list-item:hover {
-cursor: pointer;
+  cursor: pointer;
 }
 
 .loading-message {
-font-style: italic;
+  font-style: italic;
 }
 
 .no-tracks-message {
-font-style: italic;
-color: #000000;
+  font-style: italic;
+  color: #000000;
 }
 
 .username-tracks {
-margin: 20px auto;
-padding: 20px;
-font-weight: bold;
-border-radius: 5px;
-text-align: center;
-font-size: 30px;
+  margin: 20px auto;
+  padding: 20px;
+  font-weight: bold;
+  border-radius: 5px;
+  text-align: center;
+  font-size: 30px;
 }
 
 .profile-container {
@@ -53,37 +51,24 @@ font-size: 30px;
   align-items: center;
   justify-content: center;
   margin-left: 10%;
-  /* margin: 0 auto; */
   width: 50%;
   font-family: Arial, sans-serif;
   color: #333;
 }
 
-h2 {
+.username-tracks-title {
   color: #1da1f2;
   margin-bottom: 20px;
 }
 
-/* .track-item {
-  border: 1px solid #1da1f2;
-  border-radius: 10px;
-  padding: 10px;
-  margin: 10px; 
-  margin-right: 100px;
-  width: 70%;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  justify-content: center;
-} */
-
 .profile-grid {
-  display: grid;
-  /* display: flex; */
-  /* grid-template-rows: auto 1fr; */
-  margin-left: 10%;
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  /* width: 50%; */
-  height: 100vh; 
+  margin-left: 20%;
+  margin-right: 10%;
   gap: 20px;
+  width: 80%;
+  max-width: 1200px;
 }
-
 
