--- a/frontend/src/components/Profile/ProfileHeader.css
+++ b/frontend/src/components/Profile/ProfileHeader.css
@@ -1,34 +1,41 @@
 .profile-header {
-    position: relative;
-    width: 100%;
-    padding-left: 180px;
-  }
-  
-  .banner {
-    width: 100%;
-    height: 400px;
-    object-fit: absolute;
-  }
-  
-  .profile-info {
-    display: flex;
-    justify-content: space-between;
-    top: 150px;
-    width: 80%;
-    height: 70%;
-    left: 5%;
-    background-color: rgb(19, 222, 185);
-    padding: 10px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
-    padding-right: 50px;
-  }
-  
-  .profile-pic {
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-  }
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.banner {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.profile-info {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.profile-pic {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+}
+
+.follower-info {
+  display: flex;
+  gap: 10px;
+  font-size: 14px;
+}
+
+.follower-info div {
+  font-weight: bold;
+  color: #333;
+}
+
+
   
   .follower-info {
     display: flex;
