--- a/frontend/src/components/NavBar/SidebarLinks.css
+++ b/frontend/src/components/NavBar/SidebarLinks.css
@@ -12,7 +12,7 @@
     width: 10%;
     height: 100vh;
     position: fixed;
-    overflow: auto;
+    /* overflow: auto; */
     display: flex;
     flex-direction: column;
     padding: 20px;
