--- a/frontend/src/components/Tracks/Tracks.css
+++ b/frontend/src/components/Tracks/Tracks.css
@@ -6,7 +6,6 @@
   margin: 10px;
   background-image: linear-gradient(45deg, #657bf6, #6b6b6b);
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
-  overflow: hidden;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   width: 80%;
 }
@@ -15,9 +14,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-left: 10%;
-  margin-right: 10%;
+  margin-left: 15%;
+  margin-right: 0;
   margin-top: 20px;
+  height: calc(110vh - 300px); /* Adjust the height as needed */
+  overflow-y: auto;
+  margin-bottom: 20px; /* Add margin at the bottom */
+  padding-bottom: 20px; /* Add padding at the bottom */
 }
 
 
