--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,3 +7,14 @@ form > .errors {
     align-items: center;
   }
 
+  html {
+    height:100%;
+    width:100%;
+    margin:0%;
+    padding:0%;
+    overflow-y: hidden;
+}
+
+body {
+    overflow-y: hidden;
+}
