--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,9 +12,9 @@ form > .errors {
     width:100%;
     margin:0%;
     padding:0%;
-    overflow-y: hidden;
+    /* overflow-y: hidden; */
 }
-
+/* 
 body {
     overflow-y: hidden;
-}
+} */
