--- a/frontend/src/components/Tracks/Tracks.css
+++ b/frontend/src/components/Tracks/Tracks.css
@@ -63,6 +63,14 @@
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
 }
 
+.artist:hover {
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+  z-index: 1;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out; 
+}
+
+
 .track-stats {
   display: flex;
   align-items: center;
