--- a/frontend/src/components/SessionForms/SigninForm.css
+++ b/frontend/src/components/SessionForms/SigninForm.css
@@ -1,92 +1,102 @@
 .login-page-container {
-    display: flex;
-    height: 100vh;
-    width: 100%;
-  }
-  
-  .image-carousel-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 50%;
-    height: 100%;
-  }
-  
-  .form-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 50%;
-    height: 100%;
-    background-color: #f8f8f8;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  .login-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    padding: 50px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  .login-form h2 {
-    margin-bottom: 20px;
-    font-size: 24px;
-    color: #333;
-  }
+  display: flex;
+  height: 100vh;
+  width: 100%;
+}
 
-  .login-form h1 {
-    margin-bottom: 200px;
-    font-size: 44px;
-    font-family: "Montserrat", sans-serif;
-    background: linear-gradient(45deg, #041E42, #00FFB0, #000000);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
-  
-  
-  .errors {
-    margin-bottom: 10px;
-    font-size: 14px;
-    color: #ff0000;
-  }
-  
-  label {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 10px;
-  }
-  
-  span {
-    margin-bottom: 5px;
-    font-size: 16px;
-    color: #333;
-  }
-  
-  input[type="text"],
-  input[type="password"] {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  input[type="submit"] {
-    padding: 10px 20px;
-    background-color: #333;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
-  
-  input[type="submit"]:hover {
-    background-color: #555;
-  }
-  
+.image-carousel-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+  height: 100%;
+  padding-top: 10px;
+}
+
+.form-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+  height: 100%;
+  background-color: #f8f8f8;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding: 50px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-top: 50px;
+}
+
+#tag-line {
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.login-form h1,
+.login-form h2 {
+  margin-top: 0px;
+}
+
+.login-form h2 {
+  margin-bottom: 20px;
+  font-size: 24px;
+  color: #333;
+}
+
+.login-form h1 {
+  margin-bottom: 20px;
+  font-size: 44px;
+  font-family: "Montserrat", sans-serif;
+  background: linear-gradient(45deg, #041E42, #00FFB0, #000000);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.errors {
+  margin-bottom: 10px;
+  font-size: 14px;
+  color: #ff0000;
+}
+
+label {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+span {
+  margin-bottom: 5px;
+  font-size: 16px;
+  color: #333;
+}
+
+input[type="text"],
+input[type="password"] {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+input[type="submit"] {
+  padding: 10px 20px;
+  background-color: #333;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+input[type="submit"]:hover {
+  background-color: #555;
+}
