--- a/frontend/src/components/MusicBar/MusicBar.css
+++ b/frontend/src/components/MusicBar/MusicBar.css
@@ -3,9 +3,9 @@
     z-index: 5;
     min-width: 620px;
     width: 100%;
-    height: 80px;
-    border-top: 1px solid #282828;
-    background-color: #303030;
+    height: 100px;
+    border-top: 1px solid rgb(0, 22, 220);
+    background-color: rgb(123, 132, 216);
     box-sizing: border-box;
     user-select: none;
     display: flex;
@@ -40,13 +40,13 @@
 }
 
 .now-playing-artist-info-name {
-    color: white;
+    color: black;
     font-size: 0.8rem;
     margin-bottom: 6px;
 }
 
 .now-playing-artist-info-artist {
-    color: hsla(0, 0%, 100%, .7);
+    color: black;
     font-size: 0.6rem;
 }
 
@@ -75,14 +75,14 @@
 }
 
 .rhap_container {
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
     display: flex;
     flex-direction: column;
-    line-height: 1;
+    /* line-height: 1; */
     font-family: inherit;
     width: 100%;
     padding: 10px 15px;
-    background-color: #303030;
+    background-color: rgb(123, 132, 216);
 }
 
 .rhap_container:focus:not(:focus-visible) {
@@ -161,20 +161,20 @@
 }
 
 .rhap_time {
-    font-size: 9px;
-    color: rgb(161, 161, 161);
+    font-size: 12px;
+    color: black;
     user-select: none;
     -webkit-user-select: none;
 }
 
 .rhap_progress-bar {
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
     position: relative;
     z-index: 0;
     width: 100%;
     height: 5px;
     background-color: hsla(0, 0%, 100%, .3);
-    border-radius: 2px;
+    /* border-radius: 2px; */
 }
 
 .rhap_progress-filled {
@@ -182,7 +182,7 @@
     position: absolute;
     z-index: 2;
     background-color: white;
-    border-radius: 2px;
+    /* border-radius: 2px; */
 }
 
 .rhap_download-progress {
@@ -190,7 +190,7 @@
     position: absolute;
     z-index: 1;
     background-color: hsla(0, 0%, 100%, 0);
-    border-radius: 2px;
+    /* border-radius: 2px; */
 }
 
 .rhap_progress-indicator {
@@ -273,6 +273,7 @@
     flex: 0 1 100px;
     user-select: none;
     -webkit-user-select: none;
+    margin-bottom: 10px;
 }
 
 .rhap_volume-bar-area {
@@ -288,12 +289,12 @@
 }
 
 .rhap_volume-bar {
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
     position: relative;
     width: 100%;
     height: 4px;
-    background-color: hsla(0, 0%, 100%, .3);
-    border-radius: 2px;
+    /* background-color: hsla(0, 0%, 100%, .3);
+    border-radius: 2px; */
 }
 
 .rhap_volume-indicator {
@@ -309,7 +310,7 @@
     position: absolute;
     z-index: 2;
     background: white;
-    border-radius: 2px;
+    /* border-radius: 2px; */
 }
 
 .rhap_button-clear {
