--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -11,7 +11,7 @@
   
   .header-index-banner {
     position: relative;
-    transform: translate(115%, 65%);
+    transform: translate(5%, -25%);
     font-size: 30px;
     color: goldenrod
   ;
@@ -23,7 +23,7 @@
     padding: 5px;
     width: 200px;
     height: 25px;
-    transform: translate(10%, -20%);
+    transform: translate(10%, -30%);
   }
   
   .search-bar p {
@@ -34,14 +34,14 @@
     display: flex;
     gap: 10px;
     margin-bottom: 20px;
-    transform: translate(235%, 135%);
+    transform: translate(-135%, 135%);
   }
 
   .feed-type-buttons {
     display: flex;
     gap: 10px;
     margin-bottom: 20px;
-    transform: translate(50%, 135%);
+    transform: translate(300%, 135%);
   }
   
   .mainfeed-city-filters button {
@@ -75,4 +75,40 @@
     background-color: #e6e6e6;
     color: #555;
   }
+
+  #logo-header .logo {
+    width: 150px;  /* Set the width as needed */
+    height: auto;  /* Height is set to auto to maintain the aspect ratio of the image */
+    transform: translate(250%, -20%);
+}
+
+#logo-header {
+  display: flex;
+  align-items: center;  /* This will vertically center the text with respect to the image */
+}
+
+#logo-header span {
+  transform: translate(155%, -35%);
+  margin-bottom: 20px;
+  font-size: 44px;
+  font-family: "Montserrat", sans-serif;
+  background: linear-gradient(45deg, #041E42, #00FFB0, #000000);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+#logo-header .meet-team {
+  transform: translate(980%, -50%);
+  font-size: 14px;
+}
+
+#logo-header .meet-team span {
+  font-size: 44px;
+  font-family: "Montserrat", sans-serif;
+  background: linear-gradient(45deg, #041E42, #ff9500, #000000);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+
   
