--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,10 @@ form > .errors {
     align-items: center;
   }
 
+  .font-link {
+    font-family: 'Outfit', sans-serif;
+    }
+
   html {
     height:100%;
     width:100%;
@@ -14,7 +18,8 @@ form > .errors {
     padding:0%;
     /* overflow-y: hidden; */
 }
-/* 
+
 body {
-    overflow-y: hidden;
-} */
+  font-family: 'Outfit', sans-serif;
+
+}
