--- a/frontend/src/components/MusicFileUpload/MusicFileUpload.css
+++ b/frontend/src/components/MusicFileUpload/MusicFileUpload.css
@@ -22,7 +22,7 @@
 .upload-track input[type="submit"] {
   width: 120px;
   padding: 10px;
-  background-color: #ff6b6b;
+  background-color: #657bf6;
   color: #fff;
   border: none;
   border-radius: 5px;
