--- a/frontend/src/components/NavBar/SidebarLinks.css
+++ b/frontend/src/components/NavBar/SidebarLinks.css
@@ -1,84 +1,84 @@
 .sidebarLinks {
-    display: flex;
-    flex-direction: column;
-    align-items: left;
-    justify-content: left;
-    list-style: none;
-    height: 100%;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: left;
+  list-style: none;
+  height: 100%;
+}
 
 #links-container {
-    background-color: rgb(88, 101, 210);
-    width: 10%;
-    height: 100vh;
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    justify-content: space-evenly;
-    top: 0; 
-    left: 0; 
-  }
+  background-color: rgb(88, 101, 210);
+  width: 10%;
+  height: 100vh;
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  justify-content: space-evenly;
+  top: 0;
+  left: 0;
+  z-index: 9;
+}
 
-  .sidebarLinks li {
-    margin-bottom: 10px;
-  }
-  
-  .sidebarLinks li a {
-    display: block;
-    color: #ffffff;
-    text-decoration: none;
-    font-size: 20px;
-    font-weight: bold;
-    transition: color 0.3s ease;
-  }
-  
-  .sidebarLinks li a:hover {
-    color: #0400ff;
-  }
-  
-  .sidebarLinks li button {
-    background-color: transparent;
-    border: none;
-    color: #000000;
-    cursor: pointer;
-    font-size: 15px;
-    font-weight: bold;
-    transition: color 0.3s ease;
-  }
-  
-  .sidebarLinks li button:hover {
-    color: #d503ff;
-  }
+.sidebarLinks li {
+  margin-bottom: 10px;
+}
 
-  .modal {
-    position: fixed;
-    z-index: 9999;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .modal-content {
-    background-color: #fff;
-    border-radius: 4px;
-    padding: 20px;
-    max-width: 400px;
-  }
-  
-  .close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 24px;
-    font-weight: bold;
-    cursor: pointer;
-  }
-  
+.sidebarLinks li a {
+  display: block;
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: bold;
+  transition: color 0.3s ease;
+}
 
-  
+.sidebarLinks li a:hover {
+  color: #0400ff;
+}
+
+.sidebarLinks li button {
+  background-color: transparent;
+  border: none;
+  color: #000000;
+  cursor: pointer;
+  font-size: 15px;
+  font-weight: bold;
+  transition: color 0.3s ease;
+}
+
+.sidebarLinks li button:hover {
+  color: #d503ff;
+}
+
+.modal {
+  position: fixed;
+  z-index: 9999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-content {
+  background-color: #fff;
+  border-radius: 4px;
+  padding: 20px;
+  max-width: 400px;
+  position: relative;
+  /* Add position relative */
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 24px;
+  font-weight: bold;
+  cursor: pointer;
+}
