--- a/frontend/src/components/SessionForms/SigninForm.css
+++ b/frontend/src/components/SessionForms/SigninForm.css
@@ -1,27 +1,49 @@
 .login-page-container {
-  display: flex;
+  position: relative;
   height: 100vh;
   width: 100%;
 }
 
 .image-carousel-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 50%;
-  height: 100%;
+  width: 100%;
+    /* Adjust the width as desired */
+    height: 0vh;
+    /* Adjust the height as desired */
   padding-top: 10px;
+  z-index: 1;
+  /* Add a higher z-index to make sure it's behind the form */
+}
+
+.carousel-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .form-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 50%;
-  height: 100%;
+  width: 30%;
+  height: 90%;
+  /* Adjust the height of the form container */
   background-color: #f8f8f8;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 2;
+  /* Add a higher z-index to make sure it's in front of the carousel */
 }
 
 .login-form {
@@ -33,7 +55,6 @@
   padding: 50px;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin-top: 50px;
 }
 
 #tag-line {
