--- a/frontend/src/components/Profile/ProfileHeader.css
+++ b/frontend/src/components/Profile/ProfileHeader.css
@@ -77,3 +77,100 @@
     margin-left: 5%;
   }
 }
+
+
+
+/* For Follower/Following Modal */
+
+.follow-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.follow-modal-content {
+  position: relative;
+  width: 375px;
+  height: 420px;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 20px;
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.toggle-button {
+  background-color: transparent;
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
+  color: #333;
+  padding: 5px 10px;
+}
+
+.toggle-button:focus {
+  outline: none;
+}
+
+.toggle-button.active {
+  background-color: #333;
+  color: #fff;
+}
+
+.modal-body {
+  height: 300px;
+  overflow-y: scroll;
+}
+
+.followers-content,
+.following-content {
+  height: 100%;
+}
+
+/* Styling for the scrollbars */
+.modal-body::-webkit-scrollbar {
+  width: 8px;
+}
+
+.modal-body::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 4px;
+}
+
+.modal-body::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+
+/* Styling for info box */
+.followers-content-box {
+  display: flex;
+  justify-content:flex-start;
+  align-items: center;
+  /* border: 1px solid black; */
+  margin-top: 20px;
+
+}
+
+.followers-content-box:hover {
+  cursor: pointer;
+}
+.followers-content-img {
+  max-width: 70px;
+  margin-right: 30px;
+  /* max-height: 30px; */
+  border-radius: 10px;
+}
+
+.followers-content-box-handle {
+  font-size: 20px;
+}
