--- a/frontend/src/components/NavBar/SidebarLinks.css
+++ b/frontend/src/components/NavBar/SidebarLinks.css
@@ -36,7 +36,7 @@
 }
 
 .sidebarLinks li a:hover {
-  color: #0400ff;
+  color: #7270e6;
 }
 
 .sidebarLinks li button {
@@ -52,7 +52,7 @@
 }
 
 .sidebarLinks li button:hover {
-  color: #0400ff;
+  color: #7270e6;
 }
 
 .modal {
