--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -3,12 +3,12 @@
     right: 0;
     bottom: 100px;
     top: 120px;
-    width: 330px; /* Adjust the width as needed */
+    width: 300px; /* Adjust the width as needed */
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     flex-direction: column;
     align-items: center;
-    background-color: #fcfcfc;
+    background-color: #ffffff;
     padding: 20px;
     z-index: 999;
 }
@@ -95,177 +95,69 @@
 
 #logo-header .meet-team span {
   font-size: 44px;
-  font-family: "Montserrat", sans-serif;
+  /* font-family: "Montserrat", sans-serif; */
   background: linear-gradient(45deg, #041E42, #ff9500, #000000);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
-.d-1 {
-    --c:  rgb(108, 108, 255); /* the color */
-    --b: .1em;    /* border length*/
-    --d: 20px;    /* the cube depth */
-    --h: 1.2em;   /* the height */
-    
-    --_s: calc(var(--d) + var(--b));
-  
-    line-height: var(--h);
-    color: #0000;
-    text-shadow: 
-      0 calc(-1*var(--_t,0em)) var(--c), 
-      0 calc(var(--h) - var(--_t,0em)) #fff;
-    border: solid #0000;
-    overflow: hidden;
-    border-width: var(--b) var(--b) var(--_s) var(--_s);
-    background:
-      linear-gradient(var(--c) 0 0) 100% 100%
-       /101% var(--_p,0%) no-repeat,
-      conic-gradient(at left var(--d)  bottom var(--d),
-        #0000 90deg, rgb(255 255 255 /0.3) 0 225deg,rgb(255 255 255 /0.6) 0) border-box,
-      conic-gradient(at left var(--_s) bottom var(--_s),
-        #0000 90deg,var(--c) 0) 0 100%/calc(100% - var(--b)) calc(100% - var(--b))  border-box;
-    transform: translate(calc(var(--d)/-1),var(--d));
-    clip-path: 
-      polygon(
-       var(--d) 0%, 
-       var(--d) 0%, 
-       100% 0%, 
-       100% calc(100% - var(--d)),
-       100% calc(100% - var(--d)),
-       var(--d) calc(100% - var(--d))
-      );
-    transition: 0.5s;
-  }
-  .d-1:hover {
-    transform: translate(0,0);
-    clip-path: 
-      polygon(
-       0% var(--d), 
-       var(--d) 0%, 
-       100% 0%, 
-       100% calc(100% - var(--d)), 
-       calc(100% - var(--d)) 100%, 
-       0% 100%
-     );
-    --_t: var(--h);
-    --_p: 105%;
-  }
-  
-  .d-2 {
-    --c:  rgb(108, 108, 255); /* the color */
-    --b: .1em;    /* border length*/
-    --d: 20px;    /* the cube depth */
-    --h: 1.2em;   /* the height */
-    
-    --_s: calc(var(--d) + var(--b));
-    color: #0000;
-    text-shadow: 
-      0 calc(-1*var(--_t,0em)) var(--c), 
-      0 calc(var(--h) - var(--_t,0em)) #fff;
-    border: solid #0000;
-    overflow: hidden;
-    border-width: var(--b) var(--_s) var(--_s) var(--b);
-    background:
-      linear-gradient(var(--c) 0 0) -1px 100%
-       /101% var(--_p,0%) no-repeat,
-      conic-gradient(from -90deg at right var(--d)  bottom var(--d),
-        #0000 90deg, rgb(255 255 255 /0.3) 0 225deg,rgb(255 255 255 /0.6) 0) border-box,
-      conic-gradient(at right var(--_s) bottom var(--_s),
-        var(--c) 270deg,#0000 0) 100% 100%/calc(100% - var(--b)) calc(100% - var(--b))  border-box;
-    transform: translate(var(--d),var(--d));
-    clip-path: 
-      polygon(
-        0% 0%,
-        calc(100% - var(--d)) 0%,
-        calc(100% - var(--d)) 0%,
-        calc(100% - var(--d)) calc(100% - var(--d)),
-        0 calc(100% - var(--d)),
-        0 calc(100% - var(--d))
-      );
-    transition: 0.5s;
-  }
-  .d-2:hover {
-    transform: translate(0,0);
-    clip-path: 
-      polygon(
-        0% 0%,
-        calc(100% - var(--d)) 0%,
-        100% var(--d),
-        100% 100%,
-        var(--d) 100%,
-        0 calc(100% - var(--d))
-      );
-    --_t: var(--h);
-    --_p: 105%;
-  }
-  
-  .d-3 {
-    --c:  rgb(108, 108, 255); /* the color */
-    --b: .1em;    /* border length*/
-    --d: 20px;    /* the cube depth */
-    --h: 1.2em;   /* the height */
-    
-    --_s: calc(var(--d) + var(--b));
-  
-    line-height: var(--h);
-    color: #0000;
-    text-shadow: 
-      0 calc(-1*var(--_t,0em)) var(--c), 
-      0 calc(var(--h) - var(--_t,0em)) #fff;
-    border: solid #0000;
-    overflow: hidden;
-    border-width: var(--b) var(--b) var(--_s) var(--_s);
-    background:
-      linear-gradient(var(--c) 0 0) 100% 100%
-       /101% var(--_p,0%) no-repeat,
-      conic-gradient(at left var(--d)  bottom var(--d),
-        #0000 90deg, rgb(255 255 255 /0.3) 0 225deg,rgb(255 255 255 /0.6) 0) border-box,
-      conic-gradient(at left var(--_s) bottom var(--_s),
-        #0000 90deg,var(--c) 0) 0 100%/calc(100% - var(--b)) calc(100% - var(--b))  border-box;
-    transform: translate(calc(var(--d)/-1),var(--d));
-    clip-path: 
-      polygon(
-       var(--d) 0%, 
-       var(--d) 0%, 
-       100% 0%, 
-       100% calc(100% - var(--d)),
-       100% calc(100% - var(--d)),
-       var(--d) calc(100% - var(--d))
-      );
-    transition: 0.5s;
-  }
-  .d-3:hover {
-    transform: translate(0,0);
-    clip-path: 
-      polygon(
-       0% var(--d), 
-       var(--d) 0%, 
-       100% 0%, 
-       100% calc(100% - var(--d)), 
-       calc(100% - var(--d)) 100%, 
-       0% 100%
-     );
-    --_t: var(--h);
-    --_p: 105%;
-  }
-  
-  
-  .mainfeed-city-filters {
-    /* height: 150vh; */
-    /* margin: 0; */
-    margin-top: 100px;
-    flex-direction: column;
-    display: flex;
-    /* grid-template-columns: auto auto; */
-    gap: 20px;
-    place-content: center;
-    align-items: center;
-    width: 80%;
-  }
+.mainfeed-city-filters {
+  flex-direction: column;
+  display: flex;
+  gap: 50px;
+  place-content: center;
+  align-items: center;
+  width: 100%;
+  margin-right: 40px;
+}
+
+.d-1,
+.d-2,
+.d-3 {
+  --c: rgb(108, 108, 255); /* the color */
+  --b: .1em; /* border length */
+  --d: 20px; /* the cube depth */
+  --h: 1.5em; /* the height */
+
+  --_s: calc(var(--d) + var(--b));
+
+  line-height: var(--h);
+  color: #0000;
+  text-shadow: 0 calc(-1 * var(--_t, 0em)) var(--c),
+    0 calc(var(--h) - var(--_t, 0em)) #fff;
+  border: solid #0000;
+  overflow: hidden;
+  border-width: var(--b) var(--b) var(--_s) var(--_s);
+  background: linear-gradient(var(--c) 0 0) 100% 100% / 101% var(--_p, 0%)
+      no-repeat,
+    conic-gradient(at left var(--d) bottom var(--d), #0000 90deg, rgb(255 255 255 / 0.3) 0 225deg, rgb(255 255 255 / 0.6) 0) border-box,
+    conic-gradient(at left var(--_s) bottom var(--_s), #0000 90deg, var(--c) 0)
+      0 100% / calc(100% - var(--b)) calc(100% - var(--b)) border-box;
+  transform: translateZ(calc(var(--d) / -1));
+  clip-path: polygon(
+    var(--d) 0%,
+    var(--d) 0%,
+    100% 0%,
+    100% calc(100% - var(--d)),
+    100% calc(100% - var(--d)),
+    var(--d) calc(100% - var(--d))
+  );
+  transition: 0.5s;
+}
+
+.d-1:hover,
+.d-2:hover,
+.d-3:hover {
+  transform: translateZ(0);
+  --_t: var(--h);
+  --_p: 105%;
+}
+
+
   .mainfeed-city-filters button {
-    font-family: system-ui, sans-serif;
-    font-size: 3rem;
-    margin:0;
+    /* font-family: system-ui, sans-serif; */
+    font-size: 3.4rem;
+    margin: 0;
     cursor: pointer;
-    padding: 0 .1em;
+    padding: 0 .6em;
   }
