--- a/frontend/src/components/MusicBar/MusicBar.css
+++ b/frontend/src/components/MusicBar/MusicBar.css
@@ -4,18 +4,19 @@
     min-width: 620px;
     width: 100%;
     height: 100px;
-    border-top: 1px solid rgb(0, 22, 220);
-    background-color: rgb(108, 108, 255);
-    box-sizing: border-box;
+    /* border-top: 1px solid rgb(0, 22, 220); */
+    background-color: rgb(0, 0, 0);
+    /* box-sizing: border-box; */
     user-select: none;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start; /* Change to move play button to the left */
     align-items: center;
-    padding: 0 16px;
-    position: fixed;
+    padding: 0 50px;
     bottom: 0;
-    left: 0;
-}
+    left: 220px;
+    overflow-x: hidden;
+  }
+
 
 .play-bar-track-info {
     min-width: 180px;
@@ -27,6 +28,7 @@
     display: flex;
     justify-content: flex-start;
     position: relative;
+    margin-left: 10px;
 }
 
 .now-playing-artist-info {
@@ -79,13 +81,15 @@
 }
 
 .play-bar-control-container {
-    width: 70%;
+    width: 90%;
     height: 100%;
     background-color: #303030;
+    margin-left: 75px;
 }
 
 .volume-control-container {
-    width: 30%;
+    width: 40%;
+    /* margin-right: 100px; */
 }
 
 .rhap_container {
@@ -96,7 +100,7 @@
     font-family: inherit;
     width: 100%;
     padding: 10px 15px;
-    background-color: rgb(108, 108, 255);
+    background-color: rgb(0, 0, 0);
 }
 
 .rhap_container:focus:not(:focus-visible) {
@@ -119,6 +123,7 @@
     display: flex;
     flex-direction: column;
     flex: 1 1 auto;
+ 
 }
 
 .rhap_stacked .rhap_controls-section {
@@ -262,6 +267,7 @@
     flex: 1 0 auto;
     justify-content: flex-end;
     align-items: center;
+    /* width: /50%; */
 }
 
 .rhap_volume-button {
@@ -279,9 +285,9 @@
 
 .rhap_volume-container {
     position: absolute;
-    bottom: 16px;
-    right: -26vw;
-    width: 110px;
+    bottom: 2px;
+    left: 45vw;
+    width: 170px;
     display: flex;
     align-items: center;
     flex: 0 1 100px;
@@ -294,7 +300,7 @@
     display: flex;
     align-items: center;
     width: 100%;
-    height: 14px;
+    /* height: 29px; */
     cursor: pointer;
 }
 
@@ -306,7 +312,7 @@
     /* box-sizing: border-box; */
     position: relative;
     width: 100%;
-    height: 4px;
+    height: 5px;
     /* background-color: hsla(0, 0%, 100%, .3);
     border-radius: 2px; */
 }
